2009-03-17  Tor Lillqvist  <tml@iki.fi>

	* libgimpconfig/gimpconfigwriter.c
	(gimp_config_writer_close_file): Drop Windows code to remove
	target file before renaming. g_rename() nowadays takes care of
	allowing replacing existing files on Windows.

2009-03-16  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped GLib version for deprecated symbols.

2009-03-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush-transform.c (gimp_brush_real_transform_mask):
	gimp_brush_real_transform_pixmap): don't mix variable declarations
	and code. Added missing const qualifiers.

	* plug-ins/common/ripple.c (ripple_horizontal): removed stray
	semicolon.

2009-03-16  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): adapt button labels to the
	latest GNOME HIG.

2009-03-16  Tor Lillqvist  <tml@iki.fi>

	* app/version.c (gimp_show_library_version): The build-time and
	run-time versions were swapped in the output.

2009-03-14  Sven Neumann  <sven@gimp.org>

	Bug 566443 – diagonal method guidelines for crop tool

	* app/tools/tools-enums.[ch]
	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw_guides):
	applied a slightly modified patch from Lukasz Hladowski, based on
	a patch from Tim Jedlicka. This adds diagonal guidelines as
	described by Edwin Westhoff to the rectangle tools.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 574427 – Stroke path with paint tool error

	* app/dialogs/stroke-dialog.c: construct the combo-box that
	selects the paint-info object with the GimpStrokeOptions as
	context. Makes the code much easier and fixes bug #574427.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 571117 – lcms plug-in crashes on broken profile

	* plug-ins/common/lcms.c: don't abort on lcms errors.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 575006 – Add preferences for snapping

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/gimpdisplayshell.c: applied part of a patch from