@@ -2011,6 +2011,86 @@ return|return
 name|FALSE
 return|;
 block|}
+ifdef|#
+directive|ifdef
+name|HAVE_FSYNC
+comment|/* If the final destination exists, we want to sync the newly written    * file to ensure the data is on disk when we rename over the destination.    * otherwise if we get a system crash we can lose both the new and the    * old file on some filesystems. (I.E. those that don't guarantee the    * data is written to the disk before the metadata.)    */
+if|if
+condition|(
+name|writer
+operator|->
+name|tmpname
+operator|&&
+name|g_file_test
+argument_list|(
+name|writer
+operator|->
+name|filename
+argument_list|,
+name|G_FILE_TEST_EXISTS
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|fsync
+argument_list|(
+name|writer
+operator|->
+name|fd
+argument_list|)
+operator|!=
+literal|0
+condition|)
+block|{
+name|g_set_error
+argument_list|(
+name|error
+argument_list|,
+name|GIMP_CONFIG_ERROR
+argument_list|,
+name|GIMP_CONFIG_ERROR_WRITE
+argument_list|,
+name|_
+argument_list|(
+literal|"Error writing to temporary file for '%s': %s\n"
+literal|"The original file has not been touched."
+argument_list|)
+argument_list|,
+name|gimp_filename_to_utf8
+argument_list|(
+name|writer
+operator|->
+name|filename
+argument_list|)
+argument_list|,
+name|g_strerror
+argument_list|(
+name|errno
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|close
+argument_list|(
+name|writer
+operator|->
+name|fd
+argument_list|)
+expr_stmt|;
+name|g_unlink
+argument_list|(
+name|writer
+operator|->
+name|tmpname
+argument_list|)
+expr_stmt|;
+return|return
+name|FALSE
+return|;
+block|}
+block|}
+endif|#
+directive|endif
 if|if
 condition|(
 name|close
